dev/envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: replacer
  labels:
    app: replacer-dev
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: replacer-dev
